# Blueprint

./: Blueprint.bp  CMakeLists.txt  README.md
src/: installer.cpp  main.cpp  path.ps1
